ADD middleware, Specialists service + routing, rated case models + cruds, tests for cases, CURSOR-PAGINATION!, fixtures REFACTOR migration, some services,
