# internal/models/cases.go
@@ -1,6 +1,9 @@
 package models
 
-import "time"
+import (
+	"github.com/guregu/null"
+	"time"
+)
 
 type CaseBase struct {
 	CameraID       string    `json:"camera_id" db:"camera_id"`
@@ -14,5 +17,41 @@ type CaseBase struct {
 
 type Case struct {
 	CaseBase
-	ID int
+	ID int `json:"id" db:"id"`
+}
+
+type CaseUpdate struct {
+	Case
+}
+
+type CaseCursor struct {
+	Cases  []Case   `json:"cases"`
+	Cursor null.Int `json:"cursor"`
+}
+
+type RatedCreate struct {
+	CaseID int  `json:"case_id" db:"case_id" validate:"required"`
+	Choice bool `json:"choice" db:"choice" validate:"required"`
+}
+
+type RatedUpdate struct {
+	CaseID int    `json:"case_id" db:"case_id" validate:"required"`
+	Status string `json:"status" db:"status" validate:"required"`
+}
+
+type RatedBase struct {
+	RatedCreate
+	SpecialistID int       `json:"specialist_id" db:"specialist_id"`
+	Date         time.Time `json:"date" db:"date"`
+	Status       string    `json:"status" db:"status"`
+}
+
+type Rated struct {
+	RatedBase
+	ID int `json:"id"`
+}
+
+type RatedCursor struct {
+	Rated  []Rated  `json:"rated"`
+	Cursor null.Int `json:"cursor"`
 }
